--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.1
   firebase: ^9.0.3
+  riverpod: ^2.6.1
+  flutter_riverpod: ^2.6.1
+  google_fonts: ^4.0.4
+  riverpod_annotation: ^2.6.1
+  intl: ^0.20.2
+  firebase_auth: ^5.5.4
+  cloud_firestore: ^5.6.8
+  animated_text_kit: ^4.2.3
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+  hive_generator: ^2.0.1
+  riverpod_generator: ^2.6.3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -60,9 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
